// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots @components/atoms/Button Primary 1`] = `
<div
  className="sc-bdVaJa fkRMdE"
>
  <button
    className="sc-htpNat eNQEjT"
    color="primary"
  >
    <span
      className="sc-ifAKCX llBRr"
    >
      Primary Button
    </span>
  </button>
  <div
    className="sc-bwzfXH cyotrw"
  />
</div>
`;

exports[`Storyshots @components/atoms/Button Secondary 1`] = `
<div
  className="sc-bdVaJa fkRMdE"
>
  <button
    className="sc-htpNat sc-bxivhb fcoXHK"
    color="secondary"
  >
    <span
      className="sc-ifAKCX llBRr"
    >
      Secondary Button
    </span>
  </button>
  <div
    className="sc-bwzfXH cyotrw"
  />
</div>
`;

exports[`Storyshots @components/atoms/Loader default 1`] = `
<div
  className="sc-bdVaJa fkRMdE"
>
  <div
    className="sc-EHOje bjkizQ"
  >
    <div
      className="sc-bZQynM kuucPz"
    >
      <span />
      <span />
      <span />
    </div>
  </div>
  <div
    className="sc-bwzfXH cyotrw"
  />
</div>
`;

exports[`Storyshots @components/atoms/Message error 1`] = `
<div
  className="sc-bdVaJa fkRMdE"
>
  <div
    className="sc-gzVnrw byxPRz"
  >
    <p
      className="sc-htoDjs gBzLKI"
    >
      Sample Message
    </p>
    <div
      className="sc-dnqmqq hokPWs"
      onClick={[Function]}
    />
  </div>
  <div
    className="sc-bwzfXH cyotrw"
  />
</div>
`;

exports[`Storyshots @components/atoms/Message neutral 1`] = `
<div
  className="sc-bdVaJa fkRMdE"
>
  <div
    className="sc-gzVnrw lduTcp"
  >
    <p
      className="sc-htoDjs gBzLKI"
    >
      Sample Message
    </p>
    <div
      className="sc-dnqmqq hokPWs"
      onClick={[Function]}
    />
  </div>
  <div
    className="sc-bwzfXH cyotrw"
  />
</div>
`;

exports[`Storyshots @components/atoms/Message success 1`] = `
<div
  className="sc-bdVaJa fkRMdE"
>
  <div
    className="sc-gzVnrw dQTqPG"
  >
    <p
      className="sc-htoDjs gBzLKI"
    >
      Sample Message
    </p>
    <div
      className="sc-dnqmqq hokPWs"
      onClick={[Function]}
    />
  </div>
  <div
    className="sc-bwzfXH cyotrw"
  />
</div>
`;
